Fixing bootstrap row-fluid. It's only needed in the player and can cause troubles if applied to the container on some templates. So moved it to the player into a new div wrapping the player. Removing class from <hr> in player. Adding a generic ss-player class instead of a specific class. Added a specific id instead.

--- a/com_sermonspeaker/media/css/player.css
+++ b/com_sermonspeaker/media/css/player.css
@@ -1,8 +1,8 @@
-div.ss-serie-player, div.ss-sermons-player, div.ss-speaker-player{
-	margin-bottom:10px;
+.ss-player {
+	margin-bottom: 10px;
 }
-hr.ss-serie-player, hr.ss-sermons-player, hr.ss-speaker-player{
-	margin:0;
+.ss-player hr {
+	margin: 0;
 }
 #playing{
 	width:100%;
